<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_friend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_friend_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/find_friend_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_friend_textview" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/find_friend_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:ems="6"
                    android:hint="@string/find_friend_hint"
                    android:inputType="textPersonName"
                    android:maxLength="8" />

                <TextView
                    android:id="@+id/add_friend_result_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Placeholder" />
            </LinearLayout>

            <Button
                android:id="@+id/add_friend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend_button" />

        </LinearLayout>


        <Button
            android:id="@+id/add_friend_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/close" />
    </LinearLayout>

</FrameLayout>