<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.profile.AddFriendFragment">

    <TextView
        android:id="@+id/find_friend_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/find_friend_textview"
        app:layout_constraintBottom_toBottomOf="@id/find_friend_editText"
        app:layout_constraintEnd_toStartOf="@id/find_friend_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/find_friend_editText" />

    <EditText
        android:id="@+id/find_friend_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="6"
        android:hint="@string/find_friend_hint"
        android:inputType="textPersonName"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/add_friend_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/find_friend_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/find_friend_editText"
        app:layout_constraintTop_toBottomOf="@id/find_friend_editText" />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/add_friend_button"
        app:layout_constraintBottom_toBottomOf="@id/find_friend_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/find_friend_editText"
        app:layout_constraintTop_toTopOf="@id/find_friend_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>