<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/login_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        android:fontFamily="@font/sky_fall_done"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_textfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_login"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:hintTextColor="@color/hint_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title_textview"
        app:layout_constraintVertical_bias="0.17000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:fontFamily="@font/booster_next_fy_black"
            android:textColor="@color/white"
            android:maxLength="10"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_hint_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_username_login"
        android:textColor="@color/hint_login"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_textfield" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hint_textview"
        app:layout_constraintVertical_bias="0.060000002">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/access_with_google_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_with_google"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/login_sign_in_button"
        app:layout_constraintEnd_toStartOf="@id/login_sign_in_button"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>