<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.lobby.CreatePartyFragment">

    <Button
        android:id="@+id/button_leave_lobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_lobby_button"
        app:layout_constraintBottom_toBottomOf="@+id/lobby_title_textview"
        app:layout_constraintTop_toTopOf="@id/lobby_title_textview"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lobby_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_title_textview"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobby_title_textview">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/team1_number_of_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6/16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/lobby_invite_friend_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_friend"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/team2_number_of_members"
                app:layout_constraintStart_toEndOf="@id/team1_number_of_members"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team2_number_of_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7/16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/change_team_image_button"
                app:layout_constraintBottom_toBottomOf="@id/change_team_image_button"
                app:layout_constraintEnd_toStartOf="@id/team_center"/>

            <TextView
                android:id="@+id/team2_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/team_center"
                app:layout_constraintTop_toTopOf="@id/change_team_image_button"
                app:layout_constraintBottom_toBottomOf="@id/change_team_image_button"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/team1_members_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/friend_found"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/change_team_image_button"
                app:layout_constraintEnd_toStartOf="@id/team_center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/team2_members_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/friend_not_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/team_center"
                app:layout_constraintTop_toBottomOf="@id/change_team_image_button"/>


            <Space
                android:id="@+id/team_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/change_team_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_ff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/lobby_ready_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lobby_ready" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>